# srai-tutorial

./: .gitignore  00_hello.ipynb  00_intro.ipynb  00_primer.ipynb  01_access_public_data.ipynb  01_introduction_to_geospatial.ipynb  02_business_use_cases.ipynb  02_geospatial_data.ipynb  02_spatial_operations.ipynb  02_srai.ipynb  03_business_use_cases.ipynb  03_london_population_density_prediction.ipynb  03_ml.ipynb  03_regionalization.ipynb  04_bicycle_station_sharing_location_prediction.ipynb  04_bikes_transfer_learning.ipynb  04_business_use_case.ipynb  04_fun.ipynb  04_ml.ipynb  05_airbnb_rental_price_prediction.ipynb  05_pre-train_hex2vec.ipynb  06_meet-again.ipynb  0x_regionalizators.ipynb  LICENSE.md  README.md  TUTORIAL_PLAN.MD  clustering.py  full_tutorial.ipynb  nbgrader_config.py  pyproject.toml  requirements.txt  rise.css  train_50k.ipynb  utils.py
answers/: 02_bicycle_station_sharing_location_prediction.py  03_airbnb_rental_price_prediction.py  03_london_population_density_prediction.py  04_bicycle_station_sharing_location_prediction.py  04_bikes_transfer_learning.ipynb
data/: bikes_spain_example.geoparquet  bikes_spain_example.parquet  cadastral_data.geojson  oneboxes.json  veturilo_stations.json  warsaw_districts.geojson  warsaw_population.json
tutorial/: 01_london_population_density_prediction.ipynb  02_bicycle_station_sharing_location_prediction.ipynb  02_load_osm_data.ipynb  03_airbnb_rental_price_prediction.ipynb  03_find_osm_data.ipynb  04_filter_osm_data.ipynb  05_get_data_using_cli.ipynb  06_use_osm_data_in_ml_model.ipynb  rise.css  (+1 more)
(+24 files in other folders)
