[project]
name = "srai-tutorial-dawts"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "branca==0.8.2",
    "contextily==1.7.0",
    "datasets==3.6.0",
    "duckdb==1.5.2",
    "folium==0.20.0",
    "geopandas==1.1.3",
    "h3==4.4.2",
    "ipykernel==7.2.0",
    "ipywidgets==8.1.8",
    "lightgbm==4.6.0",
    "lonboard==0.16.0",
    "mapclassify==2.10.0",
    "matplotlib==3.10.8",
    "nbformat>=5.10.4",
    "openpyxl==3.1.5",
    "optuna==4.8.0",
    "optuna-integration[lightgbm]==4.8.0",
    "overturemaestro==0.6.0",
    "quackosm==0.17.1",
    "scikit-learn==1.8.0",
    "seaborn==0.13.2",
    "srai[all]==0.10.2",
    "xgboost==3.2.0",
]
